scss/obsidian/_lists.scss
ul li::marker,
ol li::marker {
	font-weight: var(--font-regular);
	font-size: var(--font-scale-0);
	color: var(--text-normal);
	font-family: var(--font-sans); // not font-preview, because otherwise it will change
	font-variant-numeric: tabular-nums;
}

li::marker {
	color: inherit;
	-webkit-font-smoothing: auto;
}

.markdown-preview-view {
	& ol li p {
		margin: 0;
	}
	& ol li,
	& ul li {
		line-height: var(--leading-4); //adds white space to lists, and makes it match task lists
		margin: 4px 0;
	}
	
	& .list-collapse-indicator { // generic ul and task list
		margin-left: -3rem;
		color: var(--text-faint);
	}
	& ol li .list-collapse-indicator { // ol under 10
		margin-left: -3rem;
	}
	& ol li:nth-child(n+10) ol ol li:nth-child(n+10) .list-collapse-indicator, // ol over 10
	& ol li:nth-child(n+10) .list-collapse-indicator {
		margin-left: -3rem;
	}
	& ol li:nth-child(n+10) ol .list-collapse-indicator {
		margin-left: -3rem;
	}
}
/* ────────────────────────────── Ordered List ────────────────────────────── */

ol,
ol ol ol,
ol ol ol ol ol,
ol ol ol ol ol ol ol {
	margin-left: 0px;
	list-style-type: decimal;
}

ol ol,
ol ol ol ol,
ol ol ol ol ol ol,
ol ol ol ol ol ol ol ol {
	margin-left: 0px;
	list-style-type: lower-alpha;
}

/* ───────────────────────────── Unordered List ───────────────────────────── */
ul {
	padding-inline-start: 1.5rem;
	list-style-position: outside;
}

ul,
ul ul ul,
ul ul ul ul ul,
ul ul ul ul ul ul ul,
ul ul ul ul ul ul ul ul ul,
ol ul, // making sure that even if you indent an ul inside an ol, it will display the correct list-style-type
ul ol ul,
ol ol ul,
ol ul ol ul,
ol ul ul ul,
ul ol ul ul ul {
	list-style-type: var(--marker-odd); // "\2009" stands for thin space
	margin: 0px;
	padding: 0px;
	padding-left: 1.5rem;
}

ul ul,
ul ul ul ul,
ul ul ul ul ul ul,
ul ul ul ul ul ul ul ul,
ol ul ul,
ol ol ul ul,
ul ol ul ul,
ol ul ol ul ul,
ul ol ol ul ul {
	list-style-type: var(--marker-even); // don't set it as square, because it will misalign
	padding: 0px;
	padding-left: 1.5rem;
}

ol {
	padding-inline-start: 1.5em;
	list-style-position: outside;
}

li {
	margin-bottom: 4px; // adds a bit more spacing to lists
}

.cm-s-obsidian .HyperMD-list-line {
	padding-top: 0; // avoids weird disalignment with line numbers
}

/* ──────────────────────────────── Outliner ──────────────────────────────── */

// Some Outliner Edit Mode Corrections 
.outliner-plugin-bls .cm-s-obsidian span span.cm-formatting-list-ul:before {
	margin-top: 0px;
}
.outliner-plugin-bls .cm-s-obsidian span.cm-formatting-list{
	letter-spacing: 0px;
}

body.outliner-plugin-bls .cm-line .cm-hmd-list-indent::before {
	content: "";
	display: block;
	position: absolute;
	background-image: linear-gradient( to right, var(--text-faint) 1px, transparent 1px );
	background-size: 2.9ch 1px;
	background-position-x: 3px;
	width: 100%;
	left: 0;
	top: -1.6em;
	padding-bottom: 999em;
}

body.outliner-plugin-bls .cm-s-obsidian:not(.is-live-preview) .cm-formatting-list-ul:before,
body.outliner-plugin-bls .cm-s-obsidian.is-live-preview .list-bullet:before {
	content: "–  ";
	font-size: 100%;
	position: absolute;
	margin-top: -1px;
	margin-left: -4px;
	color: var(--text-muted);
}

// Live Preview bullet points
.list-bullet {
	left: 1.5px;
	padding-right: 4px; //fixes double markers
}

.markdown-source-view.mod-cm6 .list-bullet::after {
	font-family: var(--font-sans);
}
.list-bullet::after {
	color:var(--text-normal);
	margin-right: 0px;
	transform: translateY(-1px); }

.markdown-source-view.mod-cm6 .cm-list-1 .list-bullet::after { content: var(--marker-odd); }
.markdown-source-view.mod-cm6 .cm-list-2 .list-bullet::after { content: var(--marker-even); }
.markdown-source-view.mod-cm6 .cm-list-3 .list-bullet::after { content: var(--marker-odd); }
.markdown-source-view.mod-cm6 .cm-list-4 .list-bullet::after { content: var(--marker-even); }
.markdown-source-view.mod-cm6 .cm-list-5 .list-bullet::after { content: var(--marker-odd); }
.markdown-source-view.mod-cm6 .cm-list-6 .list-bullet::after { content: var(--marker-even); }
.markdown-source-view.mod-cm6 .cm-list-7 .list-bullet::after { content: var(--marker-odd); }
.markdown-source-view.mod-cm6 .cm-list-8 .list-bullet::after { content: var(--marker-even); }
.markdown-source-view.mod-cm6 .cm-list-9 .list-bullet::after { content: var(--marker-odd); }
.markdown-source-view.mod-cm6 .cm-list-10 .list-bullet::after { content: var(--marker-even); }

span.cm-comment .list-bullet::after { // makes bullets same colors as comments when inside them
	color: var(--text-faint);
}

.markdown-source-view.mod-cm6 .cm-list-1 .list-bullet,
.markdown-source-view.mod-cm6 .cm-list-3 .list-bullet,
.markdown-source-view.mod-cm6 .cm-list-5 .list-bullet,
.markdown-source-view.mod-cm6 .cm-list-7 .list-bullet,
.markdown-source-view.mod-cm6 .cm-list-9 .list-bullet {
	left: -1px;
}

.cm-line .cm-hmd-list-indent {
	font-size: 1.5rem;
}

